HUDF-842 removed overflow to fix chrome css @seanrose83

--- a/FJSHUD/app/styles/ie.less
+++ b/FJSHUD/app/styles/ie.less
@@ -3,6 +3,12 @@
   {   
    .ListRow .Avatar img {margin: 1px !important;}
   }  
+  
+  .Gadget {
+	border-radius: 5px;
+	overflow: hidden;
+  }
+		
   .WidgetMe{ 
     .WidgetBody{ 
         .Conference .ToolBar{
